[project]
name = "reddit-mcp"
version = "0.1.0"
description = "Reddit MCP Server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arindam Majumder"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.23.0",
    "fastmcp>=2.14.1",
    "praw>=7.8.1",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
auth = [
    "starlette>=0.49.1",
]
